themes/openstack/scss/home-page.scss
/* ... */
a.anniversary-btn:hover, a.anniversary-btn:focus  {
  text-decoration: none;
  background: #fff;
  color: #00497B;
}

.anniversary-btn-wrapper {
  width: 20%;
}

@media (max-width: 767px) {
  .news-anniversary {
    flex-direction: column;
    .anniversary-robot {
      width: 100%;
      padding: 19px 0 0;
    }
    .anniversary-text {
      width: 100%;
      padding: 10px;
    }
    .anniversary-btn-wrapper {
      width: 100%;
      text-align: center;
      margin: 19px 0 29px;
    }
  }
}

/*End News Anniversary*/

/*Diagram Section*/
.diagram-section {
  margin-top: 65px;

  h2 {
    font-size: 28px;
    color: #00497B
  }

  p {
    font-size: 16px;
    line-height: 22px;
    color: #888;
  }

  a.diagram-btn {
    white-space: nowrap;
    color: white;
    font-size: 16px;
    font-weight: 400;
    background: #ed1944;
    padding: 7px 30px;
    margin: 0 auto;
    text-align: center;
    text-transform: uppercase;
    min-width: 250px;
    display: inline-block;
    line-height: 2;
  }

  a.diagram-btn:hover, a.diagram-btn:focus  {
    text-decoration: none;
    /*background: rgba(255, 255, 255, 0.2);*/
    background: #A51B1B;
  }

  .diagram-btn-wrapper {
    margin-top: 40px;
  }

  .diagram-icons {
    img {
      margin-bottom: -80px;
    }
    p, h2 {
      text-align: center;
    }
  }
}

@media (max-width: 767px) {
  .diagram-section {
    .diagram-btn-wrapper {
      margin-top: 40px;
      text-align: center;
    }
    .diagram-icons {
      img {
        width: 50%;
        margin: 0 auto;
        display: block;
        margin-bottom: -60px;
      }
    }
  }
}
/*End Diagram*/

/*Ussuri Section*/

.section-ussuri {
  margin-top: 80px;
  background-color: #F7F7F7;

  h2 {
    padding-top: 55px;
    font-size: 28px;
    color: #00497B;
    text-align: center;
    margin-bottom: 15px;
  }

  p {
    margin-top: 23px;
    text-align: center;
    color: #00497B;
    font-size: 20px;
    line-height: 27px;
  }

  a.ussuri-btn {
    white-space: nowrap;
    color: #00497B;
    font-size: 16px;
    font-weight: 400;
    background: transparent;
    margin: 0 15px;
    border: 2px solid #00497B;
    padding: 7px 30px;
    text-align: center;
    text-transform: uppercase;
    min-width: 250px;
    display: inline-block;
    line-height: 2;
  }

  a.ussuri-btn:hover, a.ussuri-btn:focus  {
    text-decoration: none;
    /*background: rgba(255, 255, 255, 0.2);*/
    background: #00497B;
    color: #F7F7F7;
  }

  .ussuri-btn-wrapper {
    margin: 37px 0 65px;
    display: flex;
    justify-content: center;
  }
}

@media (max-width: 767px) {
  .section-ussuri {
    .ussuri-video {
      width: 90%;
    }
    .ussuri-btn-wrapper {
      flex-direction: column;
      .ussuri-btn {
        width: 50%;
        margin: 0 auto 15px;
      }
    }
  }
}

/*End Ussuri Section*/

/*Spotlight Section*/

.section-spotlight {
  margin-top: 56px;
  margin-bottom: 68px;
  text-align: center;

  h2 {
    font-size: 28px;
    line-height: 38px;
    color: #141F47;
    text-align: center;
  }

  img {
    margin-top: 34px;
    margin-bottom: 54px;
    height: 160px;
  }

  .spotlight-marketplace-logo
  {
    width: auto !important;
    height: auto !important;
    margin: 0 auto;
    display: block;
    padding-top: 2em;
    padding-bottom: 2em;
    max-width: 300px;
    max-height: 160px;
  }

  div.col-lg-6 {
    padding: 0 80px;
  }

  div.col-lg-6:first-child {
    border-right: 2px solid #D8D8D8;
  }

  a.spotlight-btn {
    white-space: nowrap;
    color: white;
    font-size: 16px;
    font-weight: 400;
    background: #ed1944;
    padding: 7px 30px;
    margin: 0 auto;
    text-align: center;
    text-transform: uppercase;
    display: inline-block;
    line-height: 2;
  }

  a.spotlight-btn:hover, a.spotlight-btn:focus  {
    text-decoration: none;
    /*background: rgba(255, 255, 255, 0.2);*/
    background: #A51B1B;
  }

  .spotlight-btn-wrapper {
    margin-top: 25px;
    margin-bottom: 68px;
  }
  a.spotlight-btn i.fa-chevron-right {
    background: transparent;
    border-radius: 50%;
    padding: 0;
    font-size: 13px;
    margin-left: 20px;
    line-height: 1em;
  }
}

@media (max-width: 767px) {
  .section-spotlight {
    margin-bottom: 18px;
    div.col-lg-6:first-child {
      border: none;
    }
  }
}

/*End Spotlight Section*/

/* TWROS Section */

.twros-section {
  background-color: #F7F7F7;
  padding-top: 51px;
  padding-bottom: 56px;

  h2 {
    text-align: center;
    font-size: 28px;
    line-height: 38px;
    color: #00497B;
  }

  p {
    color: #888888;
    font-size: 16px;
    line-height: 22px;
    text-align: center;
  }

  p:last-child {
    margin-top: 55px;
  }

  a {
    color: #00497B;
    font-size: 16px;
    line-height: 22px;
  }

  div.twros-row:first-child {
    margin-top: 63px;
  }

  .twros-row {
    display: flex;
    border: 1px solid #D8D8D8;

    .twros-img{
      height: 264px;
      width: 351px;
    }

    .twros-text {
      padding: 10px 30px 30px;
      background-color: #FFFFFF;

      h2{
        color: #00497B;
        font-size: 28px;
        line-height: 38px;
        text-align: left;
      }
      p {
        color: #888888;
        font-size: 16px;
        line-height: 22px;
        text-align: left;
      }

    }
  }

  a.twros-btn {
    border: 2px solid #00497B;
    white-space: nowrap;
    color: #00497B;
    font-size: 16px;
    font-weight: 400;
    background: #FFFFFF;
    padding: 7px 30px;
    margin: 0 auto;
    text-align: center;
    text-transform: uppercase;
    display: inline-block;
    line-height: 2;
  }

  a.twros-btn:hover, a.twros-btn:focus  {
    text-decoration: none;
    color: #FFFFFF;
    background: #00497B;
  }

  .twros-btn-wrapper {
    margin-top: 25px;
  }
}

@media (max-width: 767px) {
  .twros-section {
    .twros-row {
      flex-direction: column-reverse;
      .twros-img {
        width: 100%;
        object-fit: cover;
      }
    }
  }
}
/* ... */

